[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/badguns.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 38 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38, 37 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -40 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -38 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -425 )
current = true
limit_left = -64
limit_top = 0
limit_right = 3984
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -39 )
shape = SubResource( 2 )

[node name="BulletRightSpawnPos" type="Position2D" parent="."]
position = Vector2( 45, -40 )

[node name="BulletUpSpawnPos" type="Position2D" parent="."]
position = Vector2( 15, -90 )
rotation = -0.809833

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
